@@ -6794,7 +6794,7 @@ display_debug_pubnames (Elf_Internal_Shdr *section,
 	  if (offset != 0)
 	    {
 	      data += offset_size;
-	      printf ("    %ld\t\t%s\n", offset, data);
+	      printf ("    %-6ld\t\t%s\n", offset, data);
 	      data += strlen ((char *) data) + 1;
 	    }
 	}
@@ -7968,6 +7968,7 @@ read_and_display_attr_value (unsigned long attribute,
 
     case DW_FORM_addr:
       printf (" %#lx", uvalue);
+      break;
 
     case DW_FORM_flag:
     case DW_FORM_data1:
@@ -9354,7 +9355,7 @@ debug_displays[] =
   { ".debug_macinfo",		display_debug_macinfo },
   { ".debug_str",		display_debug_str },
   { ".debug_loc",		display_debug_loc },
-  { ".debug_pubtypes",		display_debug_not_supported },
+  { ".debug_pubtypes",		display_debug_pubnames },
   { ".debug_ranges",		display_debug_not_supported },
   { ".debug_static_func",	display_debug_not_supported },
   { ".debug_static_vars",	display_debug_not_supported },
